--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/images/Black White Square Interior Designer Logo2.png" rel="icon">
     <title>Homepage</title>
     <link rel="stylesheet" href="/css/site.css">
     <!-- CSS only -->
@@ -19,20 +20,21 @@
         <nav class="navbar navbar-expand-lg navbar-light fw-bold" id="Main Nav">
         <div class="container-fluid">
             <a class="navbar-brand">
-                <a href="products.html">
+                <a href="Index.html">
                <img src="/images/Black White Square Interior Designer Logo2.png" alt="Brand Logo" class="logo-img" a href="/html/products.html"></a></a>
         </div>
            
         </nav>
 </div>
 
-    </header>
-    
+</header>  
 
-<body>  
+
+</body>
+
+
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-</body>
 </html>
